--- a/NovaPostManagerr/NovaPostManagerr.Client/_Imports.razor
+++ b/NovaPostManagerr/NovaPostManagerr.Client/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using NovaPostManagerr.Client
+@using DevExpress.Blazor
