--- a/NovaPostManagerr/NovaPostManagerr/Components/App.razor
+++ b/NovaPostManagerr/NovaPostManagerr/Components/App.razor
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
+    <link href="_content/DevExpress.Blazor.Themes/blazing-berry.bs5.min.css" asp-append-version="true" rel="stylesheet"/>
+    <link rel="stylesheet" href="_content/DevExpress.Blazor.Themes/bootstrap-external.bs5.min.css" /> 
+    <link href="css/site.css" rel="stylesheet" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="NovaPostManagerr.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
