--- a/NovaPostManagerr/NovaPostManagerr/Components/Layout/NavMenu.razor
+++ b/NovaPostManagerr/NovaPostManagerr/Components/Layout/NavMenu.razor
@@ -25,6 +25,17 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/cityPage">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> CityPage
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/orderPost">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Order
+            </NavLink>
+        </div>
     </nav>
 </div>
 
